apps/entangled-frontend/dev/networking/gateways/gateway-entangled-frontend-dev-web.yaml
# Gateway (Gateway API) for the entangled-frontend dev environment.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-entangled-frontend-dev-web
  namespace: entangled-frontend
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    hostname: entangled.cardano.vip
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: entangled.cardano.vip
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-entangled-frontend-dev-cardano-vip-tls
    allowedRoutes:
      namespaces:
        from: All
